исправил все ошибки постмана